--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
+  },
+  "dependencies": {
+    "replicate-js": "github:nicholascelestin/replicate-js"
   }
 }
