--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "test": "build && vitest --ui",
+    "coverage": "build && vitest run --coverage"
   },
   "devDependencies": {
     "@edge-runtime/vm": "^2.1.2",
+    "@playwright/test": "^1.31.2",
     "@vitest/ui": "^0.29.2",
     "autoprefixer": "^10.4.13",
+    "playwright": "^1.31.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
@@ -22,6 +24,7 @@
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
+    "isomorphic-fetch": "^3.0.0",
     "replicate-js": "github:nicholascelestin/replicate-js"
   }
 }
