--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@edge-runtime/vm": "^2.1.2",
     "@playwright/test": "^1.31.2",
+    "@vitest/coverage-c8": "^0.29.2",
     "@vitest/ui": "^0.29.2",
     "autoprefixer": "^10.4.13",
     "playwright": "^1.31.2",
