--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cloudflare/workers-types": "^4.20230307.0",
     "@edge-runtime/vm": "^2.1.2",
     "@playwright/test": "^1.31.2",
+    "@types/pica": "^9.0.1",
     "@vitest/coverage-c8": "^0.29.2",
     "@vitest/ui": "^0.29.2",
     "autoprefixer": "^10.4.13",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "isomorphic-fetch": "^3.0.0",
+    "pica": "^9.0.1",
     "replicate-js": "github:nicholascelestin/replicate-js"
   }
 }
