Add concurrency protected to publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,10 @@ on:
 env:
   VITE_MODEL_VERSION: ${{ vars.VITE_MODEL_VERSION }}
 
+concurrency:
+  group: "publish"
+  cancel-in-progress: true
+
 jobs:
   publish:
     runs-on: ubuntu-latest
